# knowitall

./: .env.example  .gitignore  PLAN.md  PLAN_V2.md  README.md  STATUS.md  pyproject.toml
client/: cli.py
deploy/: .gitignore  Dockerfile  docker-compose.yml
docs/: deploy-proxmox.md
ingest/: git_extractor.py
schema/: migrate.py  v0.cypher  v1.cypher  v2.cypher  v3.cypher
server/: anchors.py  app.py  auth.py  cango.py  config.py  deps.py  mcp_prompts.py  mcp_tools.py  profiling.py
tests/: conftest.py  test_cango.py  test_e2e.py  test_git_extractor.py  test_mcp_tools.py  test_schema_migrate.py
