[project]
name = "knowitall"
version = "0.0.1"
description = "Personal RAG / persistent memory layer for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mcp>=1.2",
    "kuzu>=0.7",
    "lancedb>=0.15",
    "pyarrow>=18",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
